Muestra nuestros productos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body onLoad="location.href='view/login.php'">
+<body onLoad="location.href='view/login/login.php'">
     <script>
         document.write('<div class="normal" style="position:absolute;top:10;left:5;">Por favor espere...</div>');
 </script>
